--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">EasyPermission</string>
+    <string name="request_msg">These permissions are required for this application.</string>
+    <string name="granted_msg">All the permissions are granted...</string>
+    <string name="notgranted_msg">All the permissions are not  granted...</string>
 </resources>
